Added folder to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -158,6 +158,9 @@ cython_debug/
 # QuickCheck file
 QuickCheck.py
 
+# My Spotify data
+MyData
+
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
